# AdvRoboCup

./: .gitignore  .gitmodules  .~lock.Adv_Robocup_Cheat_Sheet.odt#  .~lock.Command_Adv_Robocup.odt#  Adv_Robocup_Cheat_Sheet.odt  Command_Adv_Robocup.odt  README.md  README_czh.md  README_zsl.md
Dockerfiles/tiago_robot_base/: Dockerfile
Dockerfiles/tiago_robot_base/tiago_moveit/: pal-gallium-tiago-moveit-config_1.2.3-0_amd64.deb  ros-noetic-geometric-shapes_0.7.3-1focal.20220514.015445_amd64.deb  ros-noetic-moveit-core_1.1.9-1focal.20220515.070223_amd64.deb  ros-noetic-moveit-kinematics_1.1.9-1focal.20220519.100530_amd64.deb  ros-noetic-moveit-msgs_0.11.2-1focal.20220107.005220_amd64.deb  ros-noetic-moveit-planners-ompl_1.1.9-1focal.20220519.092627_amd64.deb  ros-noetic-moveit-ros-manipulation_1.1.9-1focal.20220519.102128_amd64.deb  ros-noetic-moveit-ros-move-group_1.1.9-1focal.20220519.101210_amd64.deb  ros-noetic-moveit-ros-occupancy-map-monitor_1.1.9-1focal.20220515.071718_amd64.deb  ros-noetic-moveit-ros-perception_1.1.9-1focal.20220519.100533_amd64.deb  ros-noetic-moveit-ros-planning-interface_1.1.9-1focal.20220725.163605_amd64.deb  ros-noetic-moveit-ros-planning_1.1.9-1focal.20220519.091055_amd64.deb  ros-noetic-moveit-ros-robot-interaction_1.1.9-1focal.20220519.100545_amd64.deb  ros-noetic-moveit-ros-visualization_1.1.9-1focal.20220725.164759_amd64.deb  ros-noetic-moveit-ros-warehouse_1.1.9-1focal.20220519.100547_amd64.deb  ros-noetic-moveit-simple-controller-manager_1.1.9-1focal.20220515.071832_amd64.deb  ros-noetic-rqt-moveit_0.5.10-1focal.20220328.225504_amd64.deb  setup.sh
catkin_ws/devel/: .catkin
catkin_ws/devel/include/minimind_chat_ros/: ChatIntent.h
catkin_ws/devel/lib/minimind_chat_ros/: eval_model.py
catkin_ws/devel/lib/pkgconfig/: minimind_chat_ros.pc
catkin_ws/src/minimind_chat_ros/: CMakeLists.txt  adv_robocup_env.yaml  package.xml
catkin_ws/src/minimind_chat_ros/config/: config.yaml
catkin_ws/src/minimind_chat_ros/msg/: ChatIntent.msg
catkin_ws/src/minimind_chat_ros/policy/: lora_robocup_512.pth
catkin_ws/src/minimind_chat_ros/scripts/: chat_node.py  eval_model.py  speech_to_llm.py  test_whisper.py
my_lora/: lora_medical_512.pth
src/AdvRoboCup/grasping/: README.md  grasping.rviz
src/AdvRoboCup/grasping/rviz/: grasping.rviz
src/AdvRoboCup/grasping/scripts/: grasp.py  object_inserter.py
src/AdvRoboCup/object_grasp/: CMakeLists.txt
src/AdvRoboCup/object_grasp/launch/: object_grasp.launch
src/AdvRoboCup/object_grasp/src/: drop_item.cpp  item_grasp.cpp  move_to_position.cpp
src/adv_robocup_home/: readme2.md  shilin.md
src/adv_robocup_home/adv_nav/: .gitignore  CMakeLists.txt  package.xml  readme.md
src/adv_robocup_home/grasping/: CMakeLists.txt  README.md  package.xml
src/adv_robocup_home/object_grasp_LJ/: package.xml
src/adv_robocup_home/tiago_state_machine/: CMakeLists.txt  package.xml
src/grasping/scripts/: grasp.py
(+33 files in other folders)
